@@ -28,6 +28,7 @@ Suggests:
     GGally,
     ggplot2,
     gridExtra,
+    grid,
     irace (>= 1.0.7),
     lhs,
     plyr,
