@@ -1,4 +1,5 @@
 ParamHelpers_1.8:
+- plots produced by renderOptPathPlot, plotOptPath are now always nicely aligned
 - removed soobench from SUGGESTS and removed function extractParamSetFromSooFunction
 
 ParamHelpers_1.7:
